--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -70,21 +70,21 @@
     <None Include="Assets\ProceduralTerrainPainter\Shaders\Filters.hlsl" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
-    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Shaders\ToonShader.shader" />
+    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Textures\Shaders\ToonShader.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Shaders\SH_Fire.shader" />
+    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Textures\Shaders\SH_Fire.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
-    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Shaders\SH_Toon.shader" />
+    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Textures\Shaders\SH_Toon.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
-    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Shaders\Skybox.shader" />
+    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Textures\Shaders\Skybox.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\ProceduralTerrainPainter\_Demo\Textures\_LICENSE.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
-    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Shaders\SH_Hologram.shader" />
+    <None Include="Assets\Hayq Art\Sci-Fi Environment and Vehicles Pack\Textures\Shaders\SH_Hologram.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\ProceduralTerrainPainter\Shaders\Noise.hlsl" />
