--- a/Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.csproj
+++ b/Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.csproj
@@ -62,17 +62,17 @@
   <ItemGroup>
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\InstrumentationPoint.cs" />
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\CoverageSession.cs" />
-    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\Module.cs" />
-    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\SummarySkippedEntity.cs" />
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\Class.cs" />
-    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\HelperExtensions.cs" />
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\SkippedEntity.cs" />
-    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\Summary.cs" />
-    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\SequencePoint.cs" />
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\Method.cs" />
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\File.cs" />
-    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\SkippedMethod.cs" />
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\TrackedMethod.cs" />
+    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\Module.cs" />
+    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\SummarySkippedEntity.cs" />
+    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\HelperExtensions.cs" />
+    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\Summary.cs" />
+    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\SequencePoint.cs" />
+    <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\SkippedMethod.cs" />
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\BranchPoint.cs" />
     <Compile Include="Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\Editor\CoverageFormats\OpenCover\Model\IDocumentReference.cs" />
   </ItemGroup>
@@ -440,6 +440,14 @@
       <HintPath>Assets\Visual Design Cafe\Package Manager\VisualDesignCafe.Editor.Web.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.Analytics.Tracker">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\Unity.Analytics.Tracker.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Analytics.Editor">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\Unity.Analytics.Editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="ReportGeneratorMerged">
       <HintPath>Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
       <Private>False</Private>
@@ -496,12 +504,20 @@
       <HintPath>Assets\Visual Design Cafe\Nature Renderer\Plugins\VisualDesignCafe.Rendering.Instancing.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@3.2.1\Runtime\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Unity.VisualScripting.TextureAssets">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.4\Editor\VisualScripting.Core\EditorAssetResources\Unity.VisualScripting.TextureAssets.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VisualDesignCafe.Editor.Events">
       <HintPath>Assets\Visual Design Cafe\Package Manager\VisualDesignCafe.Editor.Events.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Analytics.StandardEvents">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\AnalyticsStandardEvents\Unity.Analytics.StandardEvents.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="nunit.framework">
