--- a/Unity.Timeline.csproj
+++ b/Unity.Timeline.csproj
@@ -63,76 +63,76 @@
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Scripting\PlayableTrack.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\SignalTrack.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Evaluation\RuntimeElement.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\AnimatorBindingCache.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Activation\ActivationTrack.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Audio\AudioMixerProperties.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\ClipCaps.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\TimeControlPlayable.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\TimelineAttributes.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Animation\AnimationOutputWeightProcessor.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Attributes\TimelineHelpURLAttribute.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Attributes\TrackColorAttribute.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Audio\AudioClipProperties.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\Signals\SignalEmitter.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\AnimationPreviewUtilities.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\ITimeControl.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Control\ControlTrack.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\TimelineClip.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\TimelinePlayable.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\AnimationPlayableAssetUpgrade.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\INotificationOptionProvider.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\ActivationControlPlayable.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Animation\AnimationTrack.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\DiscreteTime.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Timeline.deprecated.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Evaluation\RuntimeClipBase.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\WeightUtility.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\ClipUpgrade.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Audio\AudioPlayableAsset.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\TimelineAsset_CreateRemove.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\TimelineUndo.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Animation\AnimationPlayableAsset.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Control\ControlPlayableAsset.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Properties\AssemblyInfo.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\TimelineClipExtensions.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\TimelineCreateUtilities.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Audio\AudioTrack.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\MarkerTrack.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Extensions\TrackExtensions.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\Extrapolation.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Evaluation\InfiniteRuntimeClip.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\ILayerable.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\TrackUpgrade.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Evaluation\ScheduleRuntimeClip.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\IPropertyCollector.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\Signals\SignalAsset.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\PrefabControlPlayable.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\NotificationFlags.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Evaluation\IntervalTree.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\GroupTrack.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\FrameRate.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\Signals\CustomSignalEventDrawer.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\TimelineAsset.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\Marker.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\TimeUtility.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\IMarker.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Animation\ICurvesOwner.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Activation\ActivationMixerPlayable.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\DirectorControlPlayable.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\TrackAsset.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\AnimationTrackUpgrade.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\NotificationUtilities.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\BasicScriptPlayable.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\MarkerList.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Animation\AnimationPreviewUpdateCallback.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\HashUtility.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\Signals\SignalReceiver.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Activation\ActivationPlayableAsset.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\ParticleControlPlayable.cs" />
-    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\TimelineUpgrade.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\IPropertyPreview.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Evaluation\RuntimeClip.cs" />
     <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\TimeNotificationBehaviour.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\AnimatorBindingCache.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Audio\AudioMixerProperties.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\TimeControlPlayable.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Animation\AnimationOutputWeightProcessor.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Attributes\TimelineHelpURLAttribute.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Audio\AudioClipProperties.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\AnimationPreviewUtilities.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Control\ControlTrack.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\TimelineClip.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\INotificationOptionProvider.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\ActivationControlPlayable.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\DiscreteTime.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\WeightUtility.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\ClipUpgrade.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Properties\AssemblyInfo.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\TimelineClipExtensions.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Audio\AudioTrack.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Extensions\TrackExtensions.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\Extrapolation.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\TrackUpgrade.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Evaluation\ScheduleRuntimeClip.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\IPropertyCollector.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\PrefabControlPlayable.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\NotificationFlags.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Evaluation\IntervalTree.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Utilities\FrameRate.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\Signals\CustomSignalEventDrawer.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Animation\ICurvesOwner.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\TrackAsset.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\AnimationTrackUpgrade.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Playables\BasicScriptPlayable.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\MarkerList.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Animation\AnimationPreviewUpdateCallback.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Events\Signals\SignalReceiver.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Activation\ActivationPlayableAsset.cs" />
+    <Compile Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\AssetUpgrade\TimelineUpgrade.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Library\PackageCache\com.unity.timeline@1.7.6\Runtime\Unity.Timeline.asmdef" />
@@ -494,6 +494,14 @@
       <HintPath>Assets\Visual Design Cafe\Package Manager\VisualDesignCafe.Editor.Web.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.Analytics.Tracker">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\Unity.Analytics.Tracker.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Analytics.Editor">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\Unity.Analytics.Editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="ReportGeneratorMerged">
       <HintPath>Library\PackageCache\com.unity.testtools.codecoverage@1.2.6\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
       <Private>False</Private>
@@ -550,12 +558,20 @@
       <HintPath>Assets\Visual Design Cafe\Nature Renderer\Plugins\VisualDesignCafe.Rendering.Instancing.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@3.2.1\Runtime\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Unity.VisualScripting.TextureAssets">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.4\Editor\VisualScripting.Core\EditorAssetResources\Unity.VisualScripting.TextureAssets.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="VisualDesignCafe.Editor.Events">
       <HintPath>Assets\Visual Design Cafe\Package Manager\VisualDesignCafe.Editor.Events.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Analytics.StandardEvents">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\AnalyticsStandardEvents\Unity.Analytics.StandardEvents.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="netstandard">
